welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:5: error: value && is not a member of Int
	case (a) if(a/3 && a/5) => return " Fizz Buzz "
                        ^fizzBuzz:6: error: type mismatch;
 found   : Int
 required: Boolean
	case(a) if(a/3)		=> return " Fizz"
                    ^fizzBuzz:7: error: type mismatch;
 found   : Int
 required: Boolean
	case(a) if(a/5)		=>return " Buzz "
                    ^